# Portfolio-6

./: README.md
.github/workflows/.github/workflows/: my_first_actions.yml
fair_sharer/: LICENSE  pyproject.toml
fair_sharer/fairsharer/: __init__.py
fair_sharer/tests/: test_fair_sharer.py  test_my_module.py
fairsharer/: CODE_OF_CONDUCT.md  README.md  pyproject.toml
fairsharer/.github/workflows/: basic_ci.yml
fairsharer/fairsharer/: my_module.py
